--- a/Exercises/data_wrangling_dplyr.html
+++ b/Exercises/data_wrangling_dplyr.html
@@ -2987,7 +2987,8 @@ print(filtered_airquality)</code></pre>
   filter(Chick %in% c(1:5) &amp; Time &lt;= 10)
 
 print(filtered_chickweight)</code></pre>
-<pre><code>##    weight Time Chick Diet
+<pre><code>## Grouped Data: weight ~ Time | Chick
+##    weight Time Chick Diet
 ## 1      42    0     1    1
 ## 2      51    2     1    1
 ## 3      59    4     1    1
