--- a/Exercises/basic_objects_creation_extraction.html
+++ b/Exercises/basic_objects_creation_extraction.html
@@ -2858,8 +2858,8 @@ div.tocify {
 </div>
 
 
-<div id="exercise-1-vector-creation-subsetting" class="section level1">
-<h1>Exercise 1: Vector Creation &amp; Subsetting</h1>
+<div id="exercise-1-vector-creation-subsetting" class="section level1" number="1">
+<h1 number="1"><span class="header-section-number">1</span> Exercise 1: Vector Creation &amp; Subsetting</h1>
 <p><strong>Objective 1.1: Creation</strong> - Construct a numeric vector that contains the numbers from 5 to 15.</p>
 <p><strong>Required Functions:</strong> - <code>c()</code></p>
 <p><strong>Solution Code 1.1:</strong></p>
@@ -2873,8 +2873,8 @@ print(numeric_vector)</code></pre>
 print(subset_vector)</code></pre>
 <pre><code>## [1] 6 7 8 9</code></pre>
 </div>
-<div id="exercise-2-matrix-construction-subsetting" class="section level1">
-<h1>Exercise 2: Matrix Construction &amp; Subsetting</h1>
+<div id="exercise-2-matrix-construction-subsetting" class="section level1" number="2">
+<h1 number="2"><span class="header-section-number">2</span> Exercise 2: Matrix Construction &amp; Subsetting</h1>
 <p><strong>Objective 2.1: Construction</strong> - Build a 4x4 matrix using the numbers from 1 to 16. - Set the column names to “W”, “X”, “Y”, and “Z”.</p>
 <p><strong>Required Functions:</strong> - <code>matrix()</code>, <code>colnames()</code></p>
 <p><strong>Solution Code 2.1:</strong></p>
@@ -2895,8 +2895,8 @@ print(subset_matrix)</code></pre>
 ## [1,] 2 6 10 14
 ## [2,] 3 7 11 15</code></pre>
 </div>
-<div id="exercise-3-list-making-subsetting" class="section level1">
-<h1>Exercise 3: List Making &amp; Subsetting</h1>
+<div id="exercise-3-list-making-subsetting" class="section level1" number="3">
+<h1 number="3"><span class="header-section-number">3</span> Exercise 3: List Making &amp; Subsetting</h1>
 <p><strong>Objective 3.1: Making</strong> - Create a list with three elements: a numeric vector of two numbers (10, 20), a character string “apple”, and a boolean value TRUE.</p>
 <p><strong>Required Functions:</strong> - <code>list()</code></p>
 <p><strong>Solution Code 3.1:</strong></p>
@@ -2918,8 +2918,8 @@ print(my_list)</code></pre>
 print(fruit_element)</code></pre>
 <pre><code>## [1] &quot;apple&quot;</code></pre>
 </div>
-<div id="exercise-4-data-frame-crafting-subsetting" class="section level1">
-<h1>Exercise 4: Data Frame Crafting &amp; Subsetting</h1>
+<div id="exercise-4-data-frame-crafting-subsetting" class="section level1" number="4">
+<h1 number="4"><span class="header-section-number">4</span> Exercise 4: Data Frame Crafting &amp; Subsetting</h1>
 <p><strong>Objective 4.1: Crafting</strong> - Produce a data frame with three columns: <code>ID</code> (11 to 15), <code>Name</code> (Anna, Ben, Cathy, Dan, Ella), and <code>Score</code> (87, 92, 78, 95, 83).</p>
 <p><strong>Required Functions:</strong> - <code>data.frame()</code></p>
 <p><strong>Solution Code 4.1:</strong></p>
@@ -3000,7 +3000,7 @@ $(document).ready(function ()  {
 
     // establish options
     var options = {
-      selectors: "h1,h2,h3",
+      selectors: "h1,h2",
       theme: "bootstrap3",
       context: '.toc-content',
       hashGenerator: function (text) {
